--- a/Latihan/function_jawaban.ipynb
+++ b/Latihan/function_jawaban.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Jawaban Latihan Function\n",
     "\n",
-    "Jawawan Soal 1: Buat Function untuk menentukan angka terbesar dari parameter bertipe list\n",
+    "Jawaban Soal 1: Buat Function untuk menentukan angka terbesar dari parameter bertipe list\n",
     "\n",
     "##### Input: 3, -6, 5\n",
     "\n",
@@ -15,19 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-2a6f4c957cd5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mlistNumbers\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlistNumbers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-8-2a6f4c957cd5>\u001b[0m in \u001b[0;36mmax\u001b[1;34m(listNumbers)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mmax\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlistNumbers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlistNumbers\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[1;32mif\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlistNumbers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m             \u001b[0mmax\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
      ]
     }
    ],
@@ -35,7 +30,7 @@
     "def max(listNumbers):\n",
     "    max = listNumbers[0]\n",
     "    for x in listNumbers:\n",
-    "        if(listNx > max):\n",
+    "        if(x > max):\n",
     "            max = x\n",
     "    return max\n",
     "listNumbers = [3, -6, 5]\n",
@@ -43,18 +38,73 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Jawaban Soal 2: Buat Function untuk menjumlahkan semua integer yang ada pada parameter bertipe list\n",
+    "\n",
+    "##### Input: 5, 4, 7, 3, 6 \n",
+    "\n",
+    "##### Output: 25"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum(listNumbers):\n",
+    "    result = 0\n",
+    "    for x in listNumbers:\n",
+    "        result+= x\n",
+    "    return result\n",
+    "listNumbers = [5, 4, 7, 3, 6]\n",
+    "print(sum(listNumbers))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jawaban Soal 3: Buat Function untuk membalik urutan string\n",
+    "\n",
+    "##### Input: \"abcde321\"\n",
+    "\n",
+    "##### Output: \"123edcba\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123edcba\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse(stringKata):\n",
+    "    result = ''\n",
+    "    index = len(stringKata)\n",
+    "    while index > 0:\n",
+    "        result += stringKata[index - 1]\n",
+    "        index = index - 1\n",
+    "    return result\n",
+    "print(reverse('abcde321'))"
+   ]
   }
  ],
  "metadata": {
